# spark-pipeline-example

./: README.md
app/: Makefile  pyproject.toml
app/infra/docker-compose/: spark-cluster.yml
app/results/: task_1.csv  task_2.csv  task_3.csv  task_4.csv
app/src/: job.py
app/src/utils/: enconding_helper.py  source_normalizer.py  source_preprocessor.py  target_preprocessor.py
app/tests/: test_job.py
app/tests/assets/: test_source.json
