[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["vasilis"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "3.0.2"
pandas = "^1.4.2"
openpyxl = "^3.0.4"
black = "^22.3.0"
translators = "^5.0.2"
tqdm = "^4.63.1"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
